fix(core/backdrop): remove z-index from backdrop internals to fix stacking with drawer

--- a/packages/core/src/backdrop/_backdrop-styles.scss
+++ b/packages/core/src/backdrop/_backdrop-styles.scss
@@ -30,7 +30,6 @@ $variant-colors: (
   &__backdrop {
     position: absolute;
     inset: 0;
-    z-index: 0;
     touch-action: none;
     -webkit-tap-highlight-color: transparent;
 
@@ -45,7 +44,6 @@ $variant-colors: (
     width: 100%;
     height: 100%;
     position: relative;
-    z-index: 1;
     pointer-events: none;
 
     > * {
